[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Start Screen/Level Select Screen/Background.jpg" type="Texture" id=1]
[ext_resource path="res://Scenes/Start Screen/Settings/Settings.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Start Screen/Level Select Screen/locked button texture.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Start Screen/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/Start Screen/Settings/SettingsScreen.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Util/SceneTransitionRect.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 300, 300 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.223529, 0.439216, 0.478431, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.137255, 0.286275, 0.364706, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0.0823529, 0.211765, 0.282353, 1 )
shadow_size = 4
shadow_offset = Vector2( 3, 3 )

[sub_resource type="Theme" id=4]
default_font = ExtResource( 4 )
Button/colors/font_color = Color( 0.223529, 0.439216, 0.478431, 1 )
Button/colors/font_color_disabled = Color( 0.160784, 0.27451, 0.364706, 1 )
Button/colors/font_color_focus = Color( 0.584314, 0.878431, 0.8, 1 )
Button/colors/font_color_hover = Color( 0.584314, 0.878431, 0.8, 1 )
Button/colors/font_color_pressed = Color( 0.584314, 0.878431, 0.8, 1 )
Button/styles/disabled = SubResource( 3 )
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 1 )
Button/styles/pressed = SubResource( 1 )

[node name="SettingsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="Settings" parent="." instance=ExtResource( 2 )]
margin_left = -4.0
margin_top = 40.0
margin_right = -4.0
margin_bottom = 40.0

[node name="Back Button" type="Button" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 160.0
margin_bottom = 88.0
focus_mode = 0
theme = SubResource( 4 )
enabled_focus_mode = 0
text = "< back"
flat = true

[node name="Reset Level Progress" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -217.0
margin_top = 39.0
margin_right = 217.0
margin_bottom = 112.0
focus_mode = 0
theme = SubResource( 4 )
enabled_focus_mode = 0
text = "Reset Level Progress"
flat = true

[node name="SceneTransitionRect" parent="." instance=ExtResource( 8 )]
next_scene_path = "res://Scenes/Start Screen/Main Screen/StartScreen.tscn"

[connection signal="mouse_entered" from="Back Button" to="." method="_on_Back_Button_hovered"]
[connection signal="pressed" from="Back Button" to="." method="_on_Back_Button_pressed"]
[connection signal="mouse_entered" from="Reset Level Progress" to="." method="_on_Back_Button_hovered"]
[connection signal="pressed" from="Reset Level Progress" to="." method="_on_Erase_Saved_Data_pressed"]
